Additional safeguards for running kotlin code